Identity transactions for Admin and User

--- a/BookStore/appsettings.json
+++ b/BookStore/appsettings.json
@@ -9,5 +9,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SendGridKey": "f107f4a1bbmsh113e675a2f67353p1d0905jsnae7b57f4a6af"
 }
