Shopping Cart transactions

--- a/BookStore/appsettings.json
+++ b/BookStore/appsettings.json
@@ -10,5 +10,5 @@
     }
   },
   "AllowedHosts": "*",
-  "SendGridKey": "f107f4a1bbmsh113e675a2f67353p1d0905jsnae7b57f4a6af"
+  "SendGridKey": "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"
 }
